--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,3 +1,15 @@
+
+html,
+body,
+#root,
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+}
+.App {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
