--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -1,15 +1,15 @@
 .calculator {
-  height: 50%;
-  width: 30%;
+  height: 400px;
+  width: 300px;
   border: #CACACA solid 1px;
   background: #DDDDDD;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-content: center;
   
   form {
-    height: 90%;
+    height: 60%;
     width: 90%;
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +24,26 @@
   
     .submit {
       width: 30%;
+    }
+  }
+
+  .output {
+    height: 30%;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+
+    div {
+      height: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+
+      label,
+      p {
+        text-align: center;
+        margin: 0;
+      }
     }
   }
 }
