--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -44,6 +44,18 @@
         text-align: center;
         margin: 0;
       }
+
+      .high {
+        color: green;
+      }
+
+      .low {
+        color: red;
+      }
+
+      .normal {
+        color: black;
+      }
     }
   }
 }
